--- a/basic.html
+++ b/basic.html
@@ -26,7 +26,7 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! My name is <strong>John Doe</strong>. I’m a web development student who loves creating simple, functional websites using HTML. I believe that even without fancy styling, good structure makes a webpage readable and accessible.</p>
+      <p>Hello! My name is <strong>Wen Bin</strong>. I’m a web development student who loves creating simple, functional websites using HTML. I believe that even without fancy styling, good structure makes a webpage readable and accessible.</p>
     </section>
 
     <section id="hobbies">
@@ -34,8 +34,8 @@
       <p>In my free time, I enjoy:</p>
       <ol>
         <li>Reading technology blogs</li>
-        <li>Playing chess</li>
-        <li>Exploring new programming tools</li>
+        <li>Watching movies</li>
+        <li>Exploring new technologies</li>
       </ol>
     </section>
 
