--- a/basic.html
+++ b/basic.html
@@ -26,16 +26,18 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! My name is <strong>Wen Bin</strong>. I’m a web development student who loves creating simple, functional websites using HTML. I believe that even without fancy styling, good structure makes a webpage readable and accessible.</p>
+      <p>Hello! My name is <strong>Wen Bin</strong>. I’m an Information technology student who loves explore new technologies. I am also an Apple enthusiast and enjoying collecting Apple products.</p>
     </section>
 
     <section id="hobbies">
       <h2>My Hobbies</h2>
       <p>In my free time, I enjoy:</p>
       <ol>
-        <li>Reading technology blogs</li>
+        <li>Reading technology blogs from Reddit</li>
         <li>Watching movies</li>
         <li>Exploring new technologies</li>
+		<li>Tinkering with technologies</li>
+		<li>Hanging out with friends</li>
       </ol>
     </section>
 
@@ -43,16 +45,16 @@
       <h2>Photo Gallery</h2>
       <p>Here are a few of my favorite moments:</p>
       <img src="public/images/img01.png" width="120" height="120" alt="Sample photo 1">
-      <img src="https://as1.ftcdn.net/jpg/02/31/28/68/220_F_231286877_EmPbB8z2wnO4xZMOvuqyp3H2VzZQvOOz.jpg" width="120" height="120" alt="Sample photo 2">
-      <img src="https://as1.ftcdn.net/jpg/02/70/35/00/220_F_270350073_WO6yQAdptEnAhYKM5GuA9035wbRnVJSr.jpg" width="120" height="120" alt="Sample photo 3">
+      <img src="public/images/img02.png" width="120" height="120" alt="Sample photo 2">
+      <img src="public/images/img03.png" width="120" height="120" alt="Sample photo 3">
     </section>
 
     <section id="contact">
       <h2>Contact Information</h2>
       <p>You can reach me through:</p>
       <ul>
-        <li>Email: <a href="mailto:john@example.com">john@example.com</a></li>
-        <li>Website: <a href="https://example.com" target="_blank">example.com</a></li>
+        <li>Email: <a href="mailto:bin1205@icloud.com">bin1205@icloud.com</a></li>
+        <li>Website: <a href="https://github.com/Prohere7321/" target="_blank">github.com/Prohere7321/</a></li>
       </ul>
     </section>
 
@@ -82,13 +84,13 @@
   <!-- Aside -->
   <aside>
     <h3>Quote of the Day</h3>
-    <p><q>Every expert was once a beginner who didn’t give up.</q></p>
+    <p><q>Any sufficiently advanced technology is indistinguishable from magic.</q></p>
   </aside>
 
   <!-- Footer -->
   <footer>
     <hr>
-    <p>© 2025 John Doe. All rights reserved.</p>
+    <p>© 2025 Siah Wen Bin. All rights reserved.</p>
   </footer>
 
 
