--- a/basic.html
+++ b/basic.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>My First Pure HTML Page</title>
+  <title>Siah Wen Bin 6642034</title>
 </head>
 <body>
 
