--- a/basic.html
+++ b/basic.html
@@ -59,7 +59,6 @@
     </section>
 
     <section>
-      <h2>Simple Table Example</h2>
       <table border="1">
         <tbody><tr>
           <th>Language</th>
@@ -71,11 +70,11 @@
         </tr>
         <tr>
           <td>Python</td>
-          <td>1</td>
+          <td>3</td>
         </tr>
         <tr>
-          <td>JavaScript</td>
-          <td>0.5</td>
+          <td>Java</td>
+          <td>1</td>
         </tr>
       </tbody></table>
     </section>
