--- a/public/profile_2.html
+++ b/public/profile_2.html
@@ -13,7 +13,7 @@
 	  </header>
 	  <section class="about">
 	    <h2>About Me</h2>
-	    <p>Hello! My name is Bin. I enjoy coding, coffee, and cats.</p>
+	    <p>Hello! My name is Wen Bin. I enjoy watching movies, learning technologies, and helping people.</p>
 	  </section>
 	</body>
 </html>
