--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
       <p>You can reach me through:</p>
       <ul>
         <li>Email: <a href="mailto:bin1205@icloud.com">bin1205@icloud.com</a></li>
-        <li>Website: <a href="https://github.com/Prohere7321/" target="_blank">github.com/Prohere7321/</a></li>
+        <li>Website: <a href="https://github.com/Prohere7321/" target="_blank">https://github.com/Prohere7321/</a></li>
       </ul>
     </section>
 
