--- a/profile_3.html
+++ b/profile_3.html
@@ -14,7 +14,7 @@
         <section class="biography">
             <img src="public/images/img02.png" height="220">
             <h2>About Me</h2>
-            <p>A student in Assumption University of Thailand studying in the major Information Technology.</p>
+            <p>A junior student in Assumption University of Thailand, majoring in Information Technology.</p>
         </section>
  
         <section class="achievements">
